--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://art1hard.github.io/DeloteBeauty",
 	"name": "hadrovgulp",
 	"version": "1.0.0",
 	"description": "",
@@ -7,6 +8,7 @@
 	"scripts": {
 		"dev": "gulp",
 		"build": "gulp build --build",
+		"deploy": "gh-pages -d dist",
 		"zip": "gulp deployZIP --build",
 		"ftp": "gulp deployFTP --build",
 		"todash": "gulp toDash",
@@ -17,6 +19,7 @@
 	"devDependencies": {
 		"browser-sync": "^3.0.2",
 		"del": "^7.1.0",
+		"gh-pages": "^6.1.1",
 		"gulp": "^4.0.2",
 		"gulp-autoprefixer": "^9.0.0",
 		"gulp-cheerio": "^1.0.0",
